--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html>
-    <body>
-        The HTML content goes here.
-    </body>
-</html
 
-    
+Hello there, awesome person!
+<html>
+  <body>
+    Hello there, awesome person! 
+  </body>
+</html>
