--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 
-Hello there, awesome person!
+<html>
     <head>
-        <title>My awesome web page</title>
+        <title>my awesome web page</title>
     </head>
+
+    <body>
+        Hello there awesome people 
+    </body>
+</html>
