--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>
         Hello there awesome people 
+            <img src="https://avatars.githubusercontent.com/u/90634508?v=4">
         </h1>
     </body>
 </html>
