--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
 
     <body>
-        
+        <h1>
         Hello there awesome people 
-            <img src="https://avatars.githubusercontent.com/u/90634508?v=4">
-        
+            <img src="https://octodex.github.com/images/vinyltocat.png">
+        </h1>
     </body>
 </html>
