--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
 
     <body>
         <h1>
-            <img src="https://octodex.github.com/images/vinyltocat.png">
+            <ol>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
+            <ul>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Unordered list</li>
+
+</ul>
         </h1>
     </body>
 </html>
