--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>
             <ol>
 
-    <li>This</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
 
     <li>Is an</li>
 
