--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 
 <html>
-    <head>
-        <title>my awesome web page</title>
+<head>
+
+        <title>I am a title!</title>
+
+        <link rel="stylesheet" href="style.css">
+
     </head>
-
     <body>
-        <h1>
-            <ol>
-
-    <li><a href="https://github.com">This is a link to GitHub!</a></li>
-
-    <li>Is an</li>
-
-    <li>Ordered list</li>
-
-</ol>
-            <ul>
-
-    <li>This</li>
-
-    <li>Is an</li>
-
-    <li>Unordered list</li>
-
-   </ul>
-        </h1>
+       
     </body>
 </html>
