--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 
     </head>
     <body>
-       
+       <ol>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Ordered list</li>
+
+</ol>
+            <ul>
+
+    <li>This</li>
+
+    <li>Is an</li>
+
+    <li>Unordered list</li>
+
+</ul>
     </body>
 </html>
